--- a/undervisningsøvelser/01_js_basics/01_areal.html
+++ b/undervisningsøvelser/01_js_basics/01_areal.html
@@ -10,8 +10,9 @@
 
 <body>
     <script>
-
-
+        let længde = 3;
+        let bredde = 5;
+        let areal = længde * bredde;
 
     </script>
 </body>
