--- a/undervisningsøvelser/01_js_basics/09_co2.html
+++ b/undervisningsøvelser/01_js_basics/09_co2.html
@@ -38,9 +38,11 @@
 
         if (co2UdledtIKgVedFlyrejse >= 600) {
             resultat = "Nå ja vi kan jo altid kolonisere en anden planet ..."
-
         }
 
         console.log(`Ved ${timer} timers flyrejse har du udledt ${co2UdledtIKgVedFlyrejse} kg CO2`, resultat);
+
     </script>
-</body></html>
+</body>
+
+</html>
