--- a/babushka/babushka.html
+++ b/babushka/babushka.html
@@ -7,6 +7,15 @@
 </head>
 
 <style>
+    @font-face {
+        font-family: 'susannaregular';
+        src: url('susanna-webfont.woff2') format('woff2'),
+            url('susanna-webfont.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+
+    }
+
     body {
         background-color: rgba(204, 192, 175, 0.13);
     }
