--- a/babushka/babushka_2.html
+++ b/babushka/babushka_2.html
@@ -7,6 +7,16 @@
 </head>
 
 <style>
+    @font-face {
+        font-family: 'susannaregular';
+        src: url('susanna-webfont.woff2') format('woff2'),
+            url('susanna-webfont.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+
+    }
+
+
     body {
         background-color: rgba(204, 192, 175, 0.13);
     }
@@ -61,6 +71,7 @@
     #logo img {
         width: 40%;
         /*        padding-left: 25rem;*/
+
 
     }
 
@@ -185,7 +196,7 @@
             <p class="kort"> </p>
             <p class="oprindelse"> Oprindelse: </p>
             <p class="pris"> </p>
-            <p class="lang"> </p>
+            <!--            <p class="lang"> </p>-->
 
         </article>
 
@@ -249,7 +260,7 @@
                 klon.querySelector(".kort").textContent += ret.gsx$kort.$t;
                 klon.querySelector(".oprindelse").textContent += ret.gsx$oprindelse.$t;
                 klon.querySelector(".pris").textContent += ret.gsx$pris.$t + (" kr.");
-                klon.querySelector(".lang").textContent += ret.gsx$lang.$t;
+                //                klon.querySelector(".lang").textContent += ret.gsx$lang.$t;
                 klon.querySelector("img").src = `imgs/small/${ret.gsx$billede.$t}-sm.jpg`;
                 klon.querySelector(".menu").addEventListener("click", () => {
                     visDetaljer(ret);
@@ -270,9 +281,9 @@
 
         popUp.querySelector("img").src = `imgs/large/${ret.gsx$billede.$t}.jpg`;
 
-        popUp.querySelector(".oprindelse").textContent += ret.gsx$oprindelse.$t;
-        popUp.querySelector(".pris").textContent += ret.gsx$pris.$t + (" kr.");
-        popUp.querySelector(".lang").textContent += ret.gsx$lang.$t;
+        popUp.querySelector(".oprindelse").textContent = ("Oprindelse: ") + ret.gsx$oprindelse.$t;
+        popUp.querySelector(".pris").textContent = ("Pris: ") + ret.gsx$pris.$t + (" kr.");
+        popUp.querySelector(".lang").textContent = ret.gsx$lang.$t;
 
 
     }
