--- a/babushka/babushka.html
+++ b/babushka/babushka.html
@@ -145,7 +145,7 @@
             <p class="kort"> </p>
             <p class="oprindelse"> Oprindelse: </p>
             <p class="pris"> </p>
-            <p class="lang"> </p>
+<!--            <p class="lang"> </p>-->
 
         </article>
 
@@ -197,7 +197,7 @@
                 klon.querySelector(".kort").textContent += ret.gsx$kort.$t;
                 klon.querySelector(".oprindelse").textContent += ret.gsx$oprindelse.$t;
                 klon.querySelector(".pris").textContent += ret.gsx$pris.$t + (" kr.");
-                klon.querySelector(".lang").textContent += ret.gsx$lang.$t;
+// klon.querySelector(".lang").textContent += ret.gsx$lang.$t;
                 klon.querySelector("img").src = `imgs/small/${ret.gsx$billede.$t}-sm.jpg`;
 
                 klon.querySelector(".menu").addEventListener("click", () => {
